# ITMO

./: README.md
C-C++ Language/: Statements.md  lab1.c  lab2.c  lab3.c  lab4.cpp
C-C++ Language/lab1/: CMakeLists.txt  main.c
C-C++ Language/lab2/: CMakeLists.txt  main.c
C-C++ Language/lab3/: CMakeLists.txt
C-C++ Language/lab4/: CMakeLists.txt  main.cpp
Coding Theory/A/: CMakeLists.txt  main.cpp  source.cpp
Coding Theory/J/: CMakeLists.txt  main.cpp  source.cpp
Computer-architecture/: Skakov-lapochka.xlsx
Computer-architecture/1_1/: 1_1.aux  1_1.out  1_1.tex
Computer-architecture/1_2/: 1_2.aux  1_2.out  1_2.tex
Computer-architecture/1_3/: 1_3.aux  1_3.out  1_3.tex
Computer-architecture/1_4/: 1_4.aux  1_4.out  1_4.tex
Computer-architecture/1_5/: 1_5.aux  1_5.out  1_5.tex
Computer-architecture/1_6/: 1_6.aux  1_6.out  1_6.tex  readme.md
Computer-architecture/2_1/: 2_1.aux  2_1.out  2_1.tex
Computer-architecture/2_2/: 2_2.aux  2_2.out  2_2.tex
Computer-architecture/2_3-4/: 2_3-4.aux  2_3-4.out  2_3-4.tex
Computer-architecture/2_5/: 2_5.aux  2_5.out  2_5.tex
Computer-architecture/2_6/: 2_6.aux  2_6.out  2_6.tex
Computer-architecture/Preparing fo exam/: Архитектура ЭВМ.docx
Data Analysis/: Apple_Historical_StockPrice2.csv  Lab-1.ipynb  Lab-3.ipynb  Lab-5.ipynb  lab1.ipynb  lab3.ipynb  lab4.ipynb  lab5.ipynb  nba2k-full.csv
Data Analysis/.ipynb_checkpoints/: Lab-1-checkpoint.ipynb  Lab-4-checkpoint.ipynb  lab1-checkpoint.ipynb  lab4-checkpoint.ipynb  lab5-checkpoint.ipynb
Databases/control_work/: 1.1.ra  1.1.sql  1.2.ra  1.2.sql  1.3.ra  1.3.sql  1.4.ra  1.4.sql  1.5.ra  1.5.sql  1.6.ra  1.6.sql  1.7.ra  1.7.sql  1.8.ra  1.8.sql  1.9.ra  2.1.dl  2.1.sql  2.2.dl.sql  2.2.sql  2.3.dl  2.3.sql  2.4.dl  2.4.sql  2.6.dl  2.6.sql  3.1.sql  3.2.sql  3.3.sql  3.4.sql  3.5.sql  4.1.sql  4.2.sql
Databases/project/: Exam.docx  Project.docx  ddl.sql  (+3 more)
Differential Equation/: lectures_conspects_table.md
Economics/: Холодильник.key
Functional Programming/homework-0-ppv-vldmr/hw0/: README.md  hw0.cabal
Functional Programming/homework-0-ppv-vldmr/hw0/src/HW0/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
Functional Programming/homework-1-ppv-vldmr/hw1/: README.md  hw1.cabal
Functional Programming/homework-1-ppv-vldmr/hw1/src/HW1/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs  T7.hs
Functional Programming/homework-2-ppv-vldmr/hw2/: README.md  hw2.cabal
Functional Programming/homework-2-ppv-vldmr/hw2/src/HW2/: T1.hs  T2.hs  T3.hs  T4.hs  T5.hs  T6.hs
Life Safety/: Активный туризм.docx  Лаб_работа_Осознанное_потребление__1_.docx  Лаб_работа_Управление_личными_финансами.docx  Лабораторная-работа-3-Пожар-в-жилом-секторе.docx  Лабораторная_работа_1_Пожар_на_объекте.docx  Лабораторная_работа__2.docx  Попов_Владимир_Фин_мошенничество_итог_2.docx  Репродуктивное здоровье.docx
Linear Algebra/: Lab1.py  Lab2.py  Lab3.py
Mathematical Statistics/: M3335 Попов Владимир Вячеславович.xlsx  РГЗ3235.xlsx  Условия РГЗ.docx
Parallel-Algorithms/: README.md
Parallel-Algorithms/sort/: CMakeLists.txt  qsort_par.cpp  qsort_seq.cpp
Translation methods/: README.md
iOS/: Копия Методичка 1. Ускорение IOS-приложений. Параллельное программирование. Thread.docx  Копия Методичка 2. Ускорение IOS-приложений. Параллельное программирование. GCD.docx  Копия Методичка 3. Ускорение IOS-приложений. Параллельное программирование. Operation.docx
(+1432 files in other folders)
