name:                hw2
version:             0.1.0.0
synopsis:            Synopsis for task 2
description:         Task 2 for FP ITMO course

homepage:            https://github.com//fp-homework/tree/master/hw2#readme
license:             MIT
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2021 Author name here

category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:      src
  exposed-modules:     HW2.T1
                       HW2.T2
                       HW2.T3
                       HW2.T4
                       HW2.T5
                       HW2.T6
  ghc-options:         -Wall
  build-depends:       scientific, base >= 4.9 && < 5
  default-language:    Haskell2010
